[package]
name = "issue-board"
version = "0.1.0"
authors = ["Leopold Luley <git@leopoldluley.de>"]
edition = "2018"

[dependencies]
druid = { git = "https://github.com/xi-editor/druid" }
ureq = { version = "0.12.1", features = ["json"] }
serde_json = "1.0.51"
string_template = "0.2.1"

[patch."https://github.com/xi-editor/druid".druid]
path = "../druid/druid"
