[package]
name = "issue-board"
version = "0.1.0"
authors = ["Leopold Luley <git@leopoldluley.de>"]
edition = "2018"

[dependencies]
anyhow = "1.0.28"
druid = { git = "https://github.com/xi-editor/druid" }
serde = { version = "1.0.106", features = ["derive", "rc"] }
serde_json = "1.0.51"
string_template = "0.2.1"
ureq = { version = "0.12.1", features = ["json"] }

[patch."https://github.com/xi-editor/druid".druid]
git = "https://github.com/finnerale/druid"
branch = "issue-board"

[patch.crates-io.piet-common]
git = "https://github.com/linebender/piet"
package = "piet-common"
